# sales-data-analysis-with-MCP-and-LLM

./: .gitignore  README.md
mcp-client-with-api-and-webui/: README.md
mcp-client-with-api-and-webui/Design/: mcp.drawio
mcp-client-with-api-and-webui/FastAPI-with-OpenAI-and-MCP/: client.py  pyproject.toml
mcp-client-with-api-and-webui/FrontendWebUI/: README.md  chatui.py  pyproject.toml
mcp-server-with-postgresql-container/: README.md
mcp-server-with-postgresql-container/FastMCP/: main.py  mcp_server.py  pyproject.toml
mcp-server-with-postgresql-container/PostgresQL-Container/: config.py  postgres.py  pyproject.toml  test_connection.py
